[gd_scene load_steps=4 format=3 uid="uid://bydj2us25qme5"]

[ext_resource type="Script" uid="uid://vaf7lceqripc" path="res://levels/play_ui.gd" id="1_h12cl"]
[ext_resource type="Theme" uid="uid://cfkyvoqxvawux" path="res://levels/my_theme.tres" id="1_v0im6"]
[ext_resource type="Texture2D" uid="uid://cxqm6v1670c28" path="res://misc/medal.png" id="3_hembb"]

[node name="PlayUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_v0im6")
script = ExtResource("1_h12cl")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="LevelNameLabel" type="Label" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Level Name Label"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_constants/separation = 2
alignment = 1

[node name="HBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_constants/separation = 0

[node name="Steps" type="Label" parent="MarginContainer/HBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Step"
uppercase = true

[node name="StepsCountLabel" type="Label" parent="MarginContainer/HBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0000"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer2"]
texture_filter = 1
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("3_hembb")
expand_mode = 1
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_constants/separation = 0
alignment = 1

[node name="Time" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Time"
uppercase = true

[node name="TimeRemainingLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 25
text = "000"
horizontal_alignment = 1
vertical_alignment = 1
